# sver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  wrapper.sh
src/: CompletionHandler.cpp  CompletionHandler.h  DiagnosticParser.cpp  DiagnosticParser.h  NodeVisitor.cpp  NodeVisitor.h  ProjectSources.cpp  ProjectSources.h  ServerConfig.h  StdIOServer.h  dummyLog.h  main.cpp  serverHandlers.cpp  serverHandlers.h
